# RTVox

./: CONTRIBUTING.md  LICENSE  README.md  VALIDATION.txt
c/: CMakeLists.txt
c/include/: rtvox.h
c/src/: rtvox_common.c  rtvoxdec.c  rtvoxenc.c
docs/: spec-v0.md
python/: common.py  decoder.py  encoder.py
rust/: Cargo.toml
rust/src/: common.rs  decoder.rs  encoder.rs  main.rs
